# sexmntix-bridge-server

./: .env.example  .gitignore  .mcp.json  CHROMADB_INTEGRATION_GUIDE.md  CONVERSATION_PIPELINE.md  DEBUGGING_NOTES_2025-11-23.md  README.md  SESSION_SUMMARY_2025-11-16.md  SXThalamus_Development_Summary.md  SXThalamus_Next_Steps.md  WHATS_NEW.md  agent.md  alembic.ini  debug_imports.py  echo_server.py  fix_embedding_storage.py  gemini.md  init_request.json  main.py  package.json  pyproject.toml  sdk-test.py  server_stderr.txt  smoke_test_embedding.py  start-mcp.bat  start_mcp.bat  start_mcp_silent.py  start_xcp_server.bat  stderr.txt  stdout.txt  test.md  test_conversation_pipeline.py  test_document_type_implementation.py  test_event_flow.py  test_include_list.py  test_logger.py  test_prompts_refactor.py  test_sdk.py  test_session_id.py  test_stdin.py  (+3 more)
.claude/: settings.local.json
.codex/: config.toml
.gemini/: settings.json
.roo/: mcp.json
.semantix/: project.json
alembic/: env.py
docs/: CHROMADB_QUICK_START.md  EMBEDDING_MODULE_SUMMARY.md  EVENT_ARCHITECTURE_GUIDE.md  EVENT_DRIVEN_MEMORY_STORAGE_IMPLEMENTATION.md  NEXT_SESSION_EMBEDDING_GENERATION.md  SOCKET_QUICK_START.md  SOCKET_TESTING_GUIDE.md
examples/: 01-embedding-model.md  02-text-to-vector-flow.md  03-chromadb-storage.md  04-semantic-search.md  05-architecture-overview.md  EMBEDDING_ARCHITECTURE.md  test_chromadb_integration.py  test_embedding_module.py  verify_storage.py  vscode-chromadb-bridge-implementation.json
mental_nots_temp/: session-2025-11-01-19-51 copy.json
scripts/: test_icm_time.py  (+35 more)
(+1593 files in other folders)
